test/corpus/instant.txt
================================================================================
instant vector - simple
================================================================================

http_requests_total

--------------------------------------------------------------------------------

(query
  (instant_vector_selector
    (metric_name)))

================================================================================
instant vector - some label matchers
================================================================================

http_requests_total{path="/", status_code!="200", foo=~".*", bar!~".*"}

--------------------------------------------------------------------------------

(query
  (instant_vector_selector
    (metric_name)
    (label_selectors
      (label_matcher
        (label_name)
        (label_value))
      (label_matcher
        (label_name)
        (label_value))
      (label_matcher
        (label_name)
        (label_value))
      (label_matcher
        (label_name)
        (label_value)))))

================================================================================
instant vector - @ modifier start
================================================================================

http_requests_total @ start()

--------------------------------------------------------------------------------

(query
  (instant_vector_selector
    (metric_name)
    (modifier
      (at))))

================================================================================
instant vector - @ modifier end
================================================================================

http_requests_total @ start()

--------------------------------------------------------------------------------

(query
  (instant_vector_selector
    (metric_name)
    (modifier
      (at))))

================================================================================
instant vector - offset
================================================================================

http_requests_total offset -1w

--------------------------------------------------------------------------------

(query
  (instant_vector_selector
    (metric_name)
    (modifier
      (offset))))

================================================================================
instant vector - offset and @
================================================================================

http_requests_total @ end() offset -1w

--------------------------------------------------------------------------------

(query
  (instant_vector_selector
    (metric_name)
    (modifier
      (at)
      (offset))))
